--- a/1-last/haskell/package.cabal
+++ b/1-last/haskell/package.cabal
@@ -16,12 +16,12 @@ category:            Education
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable 99p1
+test-suite 99p1
+  type:                exitcode-stdio-1.0
+  ghc-options:         -threaded
+                       -rtsopts
+                       -with-rtsopts=-N
   main-is:             Main.hs
-  other-modules:       Question
-  default-extensions:  NoImplicitPrelude
-                       OverloadedStrings
   build-depends:       base >=4.13 && <5
-                     , colourista
-                     , text
+                     , doctest == 0.16.*
   default-language:    Haskell2010
